src/OpenCvSharpExtern/optflow.h

CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_getUsePostProc(cv::optflow::DenseRLOFOpticalFlow *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getUsePostProc() ? 1 : 0; }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_setUsePostProc(cv::optflow::DenseRLOFOpticalFlow *obj, int value) { return cvTry([&] { obj->setUsePostProc(value != 0); }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_getUseVariationalRefinement(cv::optflow::DenseRLOFOpticalFlow *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getUseVariationalRefinement() ? 1 : 0; }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_setUseVariationalRefinement(cv::optflow::DenseRLOFOpticalFlow *obj, int value) { return cvTry([&] { obj->setUseVariationalRefinement(value != 0); }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_getRICSPSize(cv::optflow::DenseRLOFOpticalFlow *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getRICSPSize(); }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_setRICSPSize(cv::optflow::DenseRLOFOpticalFlow *obj, int value) { return cvTry([&] { obj->setRICSPSize(value); }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_getRICSLICType(cv::optflow::DenseRLOFOpticalFlow *obj, int *returnValue) { return cvTry([&] { *returnValue = obj->getRICSLICType(); }); }
CVAPI(ExceptionStatus) optflow_DenseRLOFOpticalFlow_setRICSLICType(cv::optflow::DenseRLOFOpticalFlow *obj, int value) { return cvTry([&] { obj->setRICSLICType(value); }); }
CVAPI(ExceptionStatus) optflow_createOptFlow_DenseRLOF(cv::Ptr<cv::DenseOpticalFlow> **returnValue)
{
    return cvTry([&] {
        *returnValue = clone(cv::optflow::createOptFlow_DenseRLOF());
    });
}
CVAPI(ExceptionStatus) optflow_Ptr_SparseRLOFOpticalFlow_delete(cv::Ptr<cv::optflow::SparseRLOFOpticalFlow> *obj)
{
    return cvTry([&] { delete obj; });
}
CVAPI(ExceptionStatus) optflow_Ptr_SparseRLOFOpticalFlow_get(
    cv::Ptr<cv::optflow::SparseRLOFOpticalFlow> *ptr, cv::optflow::SparseRLOFOpticalFlow **returnValue)
{
    return cvTry([&] { *returnValue = ptr->get(); });
}
CVAPI(ExceptionStatus) optflow_SparseRLOFOpticalFlow_create(
    cv::Ptr<cv::optflow::RLOFOpticalFlowParameter> *rlofParam,
    float forwardBackwardThreshold,
    cv::Ptr<cv::optflow::SparseRLOFOpticalFlow> **returnValue)
{
    return cvTry([&] {
        const cv::Ptr<cv::optflow::RLOFOpticalFlowParameter> param =
            rlofParam ? *rlofParam : cv::Ptr<cv::optflow::RLOFOpticalFlowParameter>();
        *returnValue = new cv::Ptr<cv::optflow::SparseRLOFOpticalFlow>(
            cv::optflow::SparseRLOFOpticalFlow::create(param, forwardBackwardThreshold));
    });
}
CVAPI(ExceptionStatus) optflow_SparseRLOFOpticalFlow_getRLOFOpticalFlowParameter(
    cv::optflow::SparseRLOFOpticalFlow *obj, cv::Ptr<cv::optflow::RLOFOpticalFlowParameter> **returnValue)
{
    return cvTry([&] { *returnValue = clone(obj->getRLOFOpticalFlowParameter()); });
}
CVAPI(ExceptionStatus) optflow_SparseRLOFOpticalFlow_setRLOFOpticalFlowParameter(
    cv::optflow::SparseRLOFOpticalFlow *obj, cv::Ptr<cv::optflow::RLOFOpticalFlowParameter> *val)
{
    return cvTry([&] {
        obj->setRLOFOpticalFlowParameter(val ? *val : cv::Ptr<cv::optflow::RLOFOpticalFlowParameter>());
    });
}
CVAPI(ExceptionStatus) optflow_SparseRLOFOpticalFlow_getForwardBackward(cv::optflow::SparseRLOFOpticalFlow *obj, float *returnValue) { return cvTry([&] { *returnValue = obj->getForwardBackward(); }); }
CVAPI(ExceptionStatus) optflow_SparseRLOFOpticalFlow_setForwardBackward(cv::optflow::SparseRLOFOpticalFlow *obj, float value) { return cvTry([&] { obj->setForwardBackward(value); }); }
CVAPI(ExceptionStatus) optflow_createOptFlow_SparseRLOF(cv::Ptr<cv::SparseOpticalFlow> **returnValue)
{
    return cvTry([&] {
        *returnValue = clone(cv::optflow::createOptFlow_SparseRLOF());
    });
}
CVAPI(ExceptionStatus) optflow_calcOpticalFlowDenseRLOF(
    const interop::InputArrayProxy* I0,
    const interop::InputArrayProxy* I1,
    const interop::InputOutputArrayProxy* flow,
    cv::Ptr<cv::optflow::RLOFOpticalFlowParameter> *rlofParam,
    float forwardBackwardThreshold,
    interop::Size gridStep,
    int interpType,
    int epicK, float epicSigma, float epicLambda,
    int ricSPSize, int ricSLICType,
    int usePostProc, float fgsLambda, float fgsSigma,
    int useVariationalRefinement)
{
    return cvTry([&] {
        const cv::Ptr<cv::optflow::RLOFOpticalFlowParameter> param =
            rlofParam ? *rlofParam : cv::Ptr<cv::optflow::RLOFOpticalFlowParameter>();
        cv::optflow::calcOpticalFlowDenseRLOF(
            InProxy(*I0), InProxy(*I1), IoProxy(*flow),
            param, forwardBackwardThreshold, cpp(gridStep),
            static_cast<cv::optflow::InterpolationType>(interpType),
            epicK, epicSigma, epicLambda, ricSPSize, ricSLICType,
            usePostProc != 0, fgsLambda, fgsSigma, useVariationalRefinement != 0);
    });
}
CVAPI(ExceptionStatus) optflow_calcOpticalFlowSparseRLOF(
    const interop::InputArrayProxy* prevImg,
    const interop::InputArrayProxy* nextImg,
    const interop::InputArrayProxy* prevPts,
    const interop::InputOutputArrayProxy* nextPts,
    const interop::OutputArrayProxy* status,
    const interop::OutputArrayProxy* err,
    cv::Ptr<cv::optflow::RLOFOpticalFlowParameter> *rlofParam,
    float forwardBackwardThreshold)
{
    return cvTry([&] {
        const cv::Ptr<cv::optflow::RLOFOpticalFlowParameter> param =
            rlofParam ? *rlofParam : cv::Ptr<cv::optflow::RLOFOpticalFlowParameter>();
        cv::optflow::calcOpticalFlowSparseRLOF(
            InProxy(*prevImg), InProxy(*nextImg), InProxy(*prevPts), IoProxy(*nextPts),
            OutProxy(*status), OutProxy(*err), param, forwardBackwardThreshold);
    });
}