src/OpenCvSharp/Internal/PInvoke/NativeMethods/NativeMethods_optflow.cs


    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus optflow_DenseRLOFOpticalFlow_getUsePostProc(OpenCvSafeHandle obj, out int returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus optflow_DenseRLOFOpticalFlow_setUsePostProc(OpenCvSafeHandle obj, int value);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus optflow_DenseRLOFOpticalFlow_getUseVariationalRefinement(OpenCvSafeHandle obj, out int returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus optflow_DenseRLOFOpticalFlow_setUseVariationalRefinement(OpenCvSafeHandle obj, int value);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus optflow_DenseRLOFOpticalFlow_getRICSPSize(OpenCvSafeHandle obj, out int returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus optflow_DenseRLOFOpticalFlow_setRICSPSize(OpenCvSafeHandle obj, int value);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus optflow_DenseRLOFOpticalFlow_getRICSLICType(OpenCvSafeHandle obj, out int returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus optflow_DenseRLOFOpticalFlow_setRICSLICType(OpenCvSafeHandle obj, int value);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus optflow_createOptFlow_DenseRLOF(out IntPtr returnValue);

    #endregion

    #region SparseRLOFOpticalFlow

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus optflow_Ptr_SparseRLOFOpticalFlow_delete(IntPtr obj);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus optflow_Ptr_SparseRLOFOpticalFlow_get(IntPtr ptr, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus optflow_SparseRLOFOpticalFlow_create(
        IntPtr rlofParam, float forwardBackwardThreshold, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus optflow_SparseRLOFOpticalFlow_getRLOFOpticalFlowParameter(OpenCvSafeHandle obj, out IntPtr returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus optflow_SparseRLOFOpticalFlow_setRLOFOpticalFlowParameter(OpenCvSafeHandle obj, IntPtr val);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus optflow_SparseRLOFOpticalFlow_getForwardBackward(OpenCvSafeHandle obj, out float returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus optflow_SparseRLOFOpticalFlow_setForwardBackward(OpenCvSafeHandle obj, float value);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus optflow_createOptFlow_SparseRLOF(out IntPtr returnValue);

    #endregion

    #region calcOpticalFlowDenseRLOF / calcOpticalFlowSparseRLOF

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus optflow_calcOpticalFlowDenseRLOF(
        in InputArrayProxy I0, in InputArrayProxy I1, in InputOutputArrayProxy flow,
        IntPtr rlofParam, float forwardBackwardThreshold, Size gridStep, int interpType,
        int epicK, float epicSigma, float epicLambda, int ricSPSize, int ricSLICType,
        int usePostProc, float fgsLambda, float fgsSigma, int useVariationalRefinement);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ExceptionStatus optflow_calcOpticalFlowSparseRLOF(
        in InputArrayProxy prevImg, in InputArrayProxy nextImg,
        in InputArrayProxy prevPts, in InputOutputArrayProxy nextPts,
        in OutputArrayProxy status, in OutputArrayProxy err,
        IntPtr rlofParam, float forwardBackwardThreshold);

    #endregion
}
